[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radioutils"
version = "1.5.2"
description = "Low-level radio communications modeling utilities including AM, FM, SSB/DSB demodulation of GNU Radio data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
	"GNU Radio",
	"software defined radio",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
	"numpy",
	"scipy",
]

[project.optional-dependencies]
tests = ["pytest"]
lint = [
	"flake8",
	"mypy",
]
plot = [
	"matplotlib",
]
io = [
	"pygame",
]

[tool.black]
line-length = 99

[tool.mypy]
ignore_missing_imports = true
files = ["src", "scripts"]
