[metadata]
name = radioutils
version = 1.5.2
author = Michael Hirsch, Ph.D.
description = Low-level radio communications modeling utilities including AM, FM, SSB/DSB demodulation of GNU Radio data
url = https://github.com/scivision/radioutils
keywords =
  GNU Radio
  software defined radio
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Mathematics
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  scipy

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
io = 
  pygame

[options.entry_points]
console_scripts =

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
