[metadata]
name = radioutils
version = 1.5.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Low-level radio communications modeling utilities including AM, FM, SSB/DSB demodulation of GNU Radio data
url = https://github.com/scivision/radioutils
keywords =
  GNU Radio
  software defined radio
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Mathematics
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  scipy

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
io =
  pygame
